# api/apiDoc.yml
@@ -79,6 +79,44 @@ paths:
             description: "No users found with this email"
           '400':
             description: "Invalid email/password"
+  /deposit:
+    post:
+      operationId: deposit
+      summary: "deposit money"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "token"
+          in: "body"
+          required: true
+          description: "auth token"
+          schema:
+            $ref: "#/definitions/Movement"
+        - name: "value"
+          in: "body"
+          required: true
+          description: "auth token"
+          schema:
+            $ref: "#/definitions/Movement"
+        - name: "symbol"
+          in: "body"
+          required: true
+          description: "auth token"
+          schema:
+            $ref: "#/definitions/Movement"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: "object"
+            items:
+              $ref: "#/definitions/Balance"
+        '403':
+          description: "auth token not valid"
+        '400':
+          description: "Invalid parameters"
 
 definitions:
   User:
